@@ -21,6 +21,7 @@ Verilator 4.221 devel
 * Fix tracing interfaces inside interfaces (#3309). [Kevin Millis]
 * Fix filenames with dots overwriting debug .vpp files (#3373).
 * Fix including VK_USER_OBJS in make library (#3370). [Julien Margetts]
+* Fix crash in recursive module inlining (#3393). [david-sawatzke]
 
 Verilator 4.220 2022-03-12
 ==========================
